fix previous commit for overflow

--- a/css/app.css
+++ b/css/app.css
@@ -8,8 +8,11 @@ body {
 }
 
 html {
-  height: 100%;
-  overflow-x: hidden;
+  height: 100%;  
+}
+
+html, body {
+ overflow-x: hidden; 
 }
 
 
